# scilab-xcos-mcp-server

./: .dockerignore  .gitattributes  .gitignore  DEPLOY_TO_HUGGINGFACE_SPACES.md  Dockerfile  Dockerfile.validation-worker  README.md  USE_LOCALLY.md  improvements.md  init.bat  launch_scilab.bat  pyproject.toml  server.py  setup_data.py  start_local_browser_ui.bat  start_poll.sce  start_spaces_mode_locally.bat  system_prompt.md  test_draft_workflow.py  test_flexible_validation.py  test_remote_hf_smoke_test.py  test_tools.py  test_validation.py  test_validation_worker.py  test_widgets.py  test_workflow_ui.py  validation_worker.py
data/: xcosai_poll_loop.sci
data/blocks/: ABS_VALUE.json  AFFICH_m.json  ANDBLK.json  ANDLOG_f.json  AUTOMAT.json  BACKLASH.json  BARXY.json  BIGSOM_f.json  BITCLEAR.json  BITSET.json  BOUNCE.json  BOUNCEXY.json  BPLATFORM.json  CANIMXY.json  CANIMXY3D.json  CBLOCK.json  CBLOCK4.json  CEVENTSCOPE.json  CFSCOPE.json  CLINDUMMY_f.json  CLKFROM.json  CLKGOTO.json  CLKGotoTagVisibility.json  CLKINV_f.json  CLKOUTV_f.json  CLKSOMV_f.json  CLKSPLIT_f.json  CLOCK_c.json  CLOCK_f.json  CLR.json  CLSS.json  CMAT3D.json  CMATVIEW.json  CMSCOPE.json  CONST.json  CONSTRAINT2_c.json  CONSTRAINT_c.json  CONST_f.json  CONST_m.json  CONVERT.json  (+167 more)
data/help/: MATEXPM.xml  TEST_BLOCK.xml
launcher/: launcher.js  package-lock.json  package.json
tools/: deploy_huggingface_clean.ps1  deploy_huggingface_validation_worker.ps1  remote_hf_smoke_test.py  update_metadata.py
ui/: app.js  ext-apps.bundle.js  ext-apps.js  index.html  styles.css  workflow-dashboard.html
(+921 files in other folders)
